welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:11: error: identifier expected but integer literal found.
avance(nbPas:3);
             ^Runner:14: error: ')' expected but '}' found.
	}
        ^