welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) {
	avance();
}
while (estFaceMur()) {
	gauche();
	avance();
	droite();
	avance();
}
avance(nbPas:3);
